objects/ssot__AssetParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FromDate__c</fullName>
        <label>From Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Participant Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantRole__c</fullName>
        <label>Participant Role</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ToDate__c</fullName>
        <label>To Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231055_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetParticipant_AssetId_map_Asset_I_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetParticipant_AssetId_map_Asset_I_rel</relationshipLabel>
        <relationshipName>rel_1697761231055_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231120_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetParticipant_ParticipantId_map_A_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AssetParticipant_ParticipantId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1697761231120_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761231193_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetParticipant_ParticipantId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AssetParticipant_ParticipantId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1697761231193_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>